name:                cse230-debugger
version:             0.1.0.0
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable debugger
  hs-source-dirs:     src
  Default-Extensions: OverloadedStrings
  main-is:            Main.hs
  other-modules:      UI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.0 && < 4.14
                     , brick
                     , containers
                     , lens
                     , vty
                     , microlens
                     , microlens-th