name:                cse230-debugger
version:             0.1.0.0
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable debugger
  hs-source-dirs:     src
  Default-Extensions: OverloadedStrings
  main-is:            Main.hs
  other-modules:      UI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.0 && < 4.14
                     , brick
                     , containers
                     , lens
                     , vty
                     , parsec
                     , mtl
                     , microlens
                     , microlens-th

Library
  ghc-options:        -W
  exposed-modules:    Epsilon.Types,
                      Epsilon.Parser,
                      Epsilon.Evaluator

  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base,
                       parsec,
                       containers,
                       mtl,
                       monad-coroutine

  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-epsilon-delta
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  hs-source-dirs:      test

  build-depends:       base,
                       parsec,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       cse230-debugger
  other-modules:       Epsilon.ParserTest
